# RobustShortestPath

./: .gitignore  CMakeLists.txt  CODE_REVIEW_red.md  FIXES_APPLIED.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
data/: toy_graph.json  toy_graph.txt
docs/: API.md  CONTRIBUTING.md  INPUT_OUTPUT.md
experiment_data/official_20260521_210335/: analysis.md
experiment_data/official_20260521_210335/exp3_runtime/graphs/: graph_metadata_s2.csv  medium_n100_s2_a3_case0_seed42.txt  medium_n100_s2_a3_case10_seed52.txt  medium_n100_s2_a3_case11_seed53.txt  medium_n100_s2_a3_case12_seed54.txt  medium_n100_s2_a3_case13_seed55.txt  medium_n100_s2_a3_case14_seed56.txt  medium_n100_s2_a3_case15_seed57.txt  medium_n100_s2_a3_case16_seed58.txt  medium_n100_s2_a3_case17_seed59.txt  medium_n100_s2_a3_case18_seed60.txt  medium_n100_s2_a3_case19_seed61.txt  medium_n100_s2_a3_case1_seed43.txt  medium_n100_s2_a3_case2_seed44.txt  medium_n100_s2_a3_case3_seed45.txt  medium_n100_s2_a3_case4_seed46.txt  medium_n100_s2_a3_case5_seed47.txt  medium_n100_s2_a3_case6_seed48.txt  medium_n100_s2_a3_case7_seed49.txt  medium_n100_s2_a3_case8_seed50.txt  medium_n100_s2_a3_case9_seed51.txt  medium_n100_seed42.txt  medium_n100_seed43.txt  medium_n100_seed44.txt  medium_n100_seed45.txt  medium_n100_seed46.txt  medium_n100_seed47.txt  medium_n100_seed48.txt  medium_n100_seed49.txt  medium_n100_seed50.txt  medium_n100_seed51.txt  medium_n100_seed52.txt  medium_n100_seed53.txt  medium_n100_seed54.txt  medium_n100_seed55.txt  medium_n100_seed56.txt  medium_n100_seed57.txt  medium_n100_seed58.txt  medium_n100_seed59.txt  medium_n100_seed60.txt  (+113 more)
experiment_data/official_20260521_210335/exp3_runtime/results/: runtime_experiment.csv  runtime_summary.csv
experiment_data/official_20260521_210335/exp4_robustness/graphs/: graph_metadata.csv  medium_n50_s1_a3_case0_seed42.txt  medium_n50_s1_a3_case10_seed52.txt  medium_n50_s1_a3_case11_seed53.txt  medium_n50_s1_a3_case12_seed54.txt  medium_n50_s1_a3_case13_seed55.txt  medium_n50_s1_a3_case14_seed56.txt  medium_n50_s1_a3_case15_seed57.txt  medium_n50_s1_a3_case16_seed58.txt  medium_n50_s1_a3_case17_seed59.txt  medium_n50_s1_a3_case18_seed60.txt  medium_n50_s1_a3_case19_seed61.txt  medium_n50_s1_a3_case1_seed43.txt  medium_n50_s1_a3_case2_seed44.txt  medium_n50_s1_a3_case3_seed45.txt  medium_n50_s1_a3_case4_seed46.txt  medium_n50_s1_a3_case5_seed47.txt  medium_n50_s1_a3_case6_seed48.txt  medium_n50_s1_a3_case7_seed49.txt  medium_n50_s1_a3_case8_seed50.txt  medium_n50_s1_a3_case9_seed51.txt  medium_n50_s2_a3_case0_seed42.txt  medium_n50_s2_a3_case13_seed55.txt  medium_n50_s2_a3_case15_seed57.txt  medium_n50_s2_a3_case18_seed60.txt  medium_n50_s2_a3_case19_seed61.txt  medium_n50_s2_a3_case2_seed44.txt  medium_n50_s2_a3_case7_seed49.txt  medium_n50_s2_a3_case8_seed50.txt  medium_n50_s3_a3_case0_seed42.txt  medium_n50_s3_a3_case10_seed52.txt  medium_n50_s3_a3_case11_seed53.txt  medium_n50_s3_a3_case12_seed54.txt  medium_n50_s3_a3_case13_seed55.txt  medium_n50_s3_a3_case14_seed56.txt  medium_n50_s3_a3_case15_seed57.txt  medium_n50_s3_a3_case16_seed58.txt  (+52 more)
experiments/: README.md  generate_medium_graphs.py  generate_trap_graphs.py  paired_winrate.py  run_robustness.cpp  run_runtime.cpp
include/rsp/: baseline.hpp  bellman.hpp  dijkstra_like.hpp  exhaustive_search.hpp  graph.hpp  io.hpp  policy_iteration.hpp  proper_policy.hpp  runner.hpp  utils.hpp  value_iteration.hpp
report/: README.md  experiment_results.md  hhm_experiment_report.md  lct_experiment_report.md  proof_section.md  theory_notes.md  图表清单_生成.md  报告写作大纲_outline.md  目录预览.txt  第一部分_引言与背景_草稿.md  第七部分_优化与改进_草稿.md  第三部分_算法_草稿.md  第二部分_论文解读与理论_草稿.md  第五部分_数据集构造_草稿.md  第八部分_结论_草稿.md  第六部分_实验与结果分析_草稿.md  第四部分_复现实现_源码精讲_草稿.md  附录E_图片prompt_生成.md  附录E_核心源码_生成.md  附录F_核心源码_生成.md  附录_草稿.md  鲁棒最短路径算法复现实验报告.docx
src/: baseline.cpp  bellman.cpp  dijkstra_like.cpp  exhaustive_search.cpp  graph.cpp  io.cpp  main.cpp  policy_iteration.cpp  proper_policy.cpp  runner.cpp  value_iteration.cpp
tests/: test_hhm.cpp  test_lct.cpp  test_toy.cpp
visualization/: README.md  common.py  plot_comparison.py  plot_graph.py  plot_policy.py  plot_toy_steps.py  plot_values.py
(+129 files in other folders)
